# rust_helpers

./: .gitignore  ALGORITHMS.md  CHANGELOG.md  Cargo.toml  PRD.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
examples/: record_linkage.py
profiling/: profile_fuzzy.py
python/polars_fuzzy/: __init__.py  _expression.py  _registry.py  frame.py  hybrid.py
python/polars_stringsim/: __init__.py  _expression.py  _registry.py  frame.py  hybrid.py
src/: combiner.rs  expr_combine.rs  expr_hybrid.rs  lib.rs  series_util.rs  thread_pool.rs
src/algorithms/: edit.rs  jaro.rs  lcs.rs  mod.rs  phonetic.rs  token.rs
src/expr/: mod.rs
tests/python/: test_advanced.py  test_expressions.py
