[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "polars-stringsim"
version = "0.2.0"
description = "Composable fuzzy string matching for Polars"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Pratham-26" }]
keywords = ["polars", "fuzzy", "string-matching", "record-linkage", "pyo3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = ["polars>=1.14"]

[project.urls]
Homepage = "https://github.com/Pratham-26/rust_helpers"
Repository = "https://github.com/Pratham-26/rust_helpers"
Documentation = "https://github.com/Pratham-26/rust_helpers#readme"
Issues = "https://github.com/Pratham-26/rust_helpers/issues"

[tool.maturin]
module-name = "polars_stringsim._polars_stringsim"
python-source = "python"
features = ["pyo3/extension-module"]
